test/expected/perr_unterminated_subshell.out
shit: 2:1: error: Unterminated subshell.
     2 |  (echo hi
       |  ^~ here.
shit: 2:9: note:
     2 |  (echo hi
       |          ^~ Expected ')'.
